[package]
name = "pingtest"
version = "0.1.0"
edition = "2021"
authors = ["makalin <makalin@gmail.com>"]
description = "A beautiful, fast, and feature-rich terminal-based internet speed test application"
license = "MIT"
repository = "https://github.com/makalin/pingtest"
keywords = ["speedtest", "network", "ping", "terminal"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "pingtest"
path = "simple_main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"